<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.myandroidfundamentalsubmission.ui.home.HomeFragment"
        android:label="@string/dicoding_event"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_detail"
            app:destination="@id/navigation_detail" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_setting"
            app:destination="@id/navigation_setting" />
    </fragment>

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.dicoding.myandroidfundamentalsubmission.ui.upcoming.UpcomingFragment"
        android:label="@string/upcoming_event"
        tools:layout="@layout/fragment_upcoming">
        <action
            android:id="@+id/action_navigation_upcoming_to_navigation_detail"
            app:destination="@id/navigation_detail" />
        <action
            android:id="@+id/action_navigation_upcoming_to_navigation_setting"
            app:destination="@id/navigation_setting" />
    </fragment>

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.dicoding.myandroidfundamentalsubmission.ui.finished.FinishedFragment"
        android:label="@string/finished_event"
        tools:layout="@layout/fragment_finished">
        <action
            android:id="@+id/action_navigation_finished_to_navigation_detail"
            app:destination="@id/navigation_detail" />
        <action
            android:id="@+id/action_navigation_finished_to_navigation_setting"
            app:destination="@id/navigation_setting" />
    </fragment>

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.dicoding.myandroidfundamentalsubmission.ui.detail.DetailedEventFragment"
        android:label="@string/event_details"
        tools:layout="@layout/fragment_detailed_event" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.dicoding.myandroidfundamentalsubmission.ui.favorite.FavoriteFragment"
        android:label="@string/favorite_event"
        tools:layout="@layout/fragment_favorite">
        <action
            android:id="@+id/action_navigation_favorite_to_navigation_setting"
            app:destination="@id/navigation_setting" />
        <action
            android:id="@+id/action_navigation_favorite_to_navigation_detail"
            app:destination="@id/navigation_detail" />
    </fragment>
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.dicoding.myandroidfundamentalsubmission.ui.setting.SettingFragment"
        android:label="@string/setting_title"
        tools:layout="@layout/fragment_setting" />
</navigation>