<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            style="@style/CustomSearchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:iconifiedByDefault="false"
            app:queryBackground="@android:color/transparent" />

        <TextView
            android:id="@+id/tvNoResult"
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:text="@string/no_events_found"
            android:textSize="16sp"
            android:visibility="gone" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/rvSearchResultsCarousel"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvFinishedTitle"
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/finished_event"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/rvCarousel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvError"
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_events_available"
            android:textAlignment="center"
            android:textSize="16sp"
            android:visibility="gone"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tvUpcomingTitle"
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:text="@string/upcoming_event"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNoEvent"
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="56dp"
            android:text="@string/no_events_available"
            android:textSize="16sp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvEvents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="56dp"
            android:nestedScrollingEnabled="false"
            tools:listitem="@layout/item_events" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
